# crash_store

./: .gitignore  README.md  config.example.ini  docker-compose.yml  manage.py
INSTALL/: README.md
backend/: .dockerignore  Dockerfile  config.example.ini  requirements.txt
backend/accounts/: admin.py  models.py  serializers.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/crash_store/: asgi.py  settings.py  urls.py  wsgi.py
backend/dumps/: apps.py  models.py  serializers.py  views.py
crash_store/: settings.py  urls.py
dumps/: models.py  serializers.py  views.py
examples/cppFile/: CMakeLists.txt
examples/cppFile/src/: main.cpp
frontend/: .dockerignore  Dockerfile  index.html  nginx-spa.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: dumps.ts
frontend/src/components/: DumpList.css  DumpList.tsx  LoginForm.css  LoginForm.tsx  ProtectedRoute.tsx  RegisterForm.css  RegisterForm.tsx
frontend/src/features/auth/: api.ts  types.ts
frontend/src/features/dumps/: api.ts  types.ts
frontend/src/pages/: DumpListPage.css  DumpListPage.tsx  LoginPage.css  LoginPage.tsx  RegisterPage.css  RegisterPage.tsx
frontend/src/types/: crashDump.ts
nginx/: default.conf
